...
    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <pl.kossa.myflights.views.appbars.BackAppBar
            android:id="@+id/backAppbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:elevation="8dp"
            app:deleteVisible="false" />

        <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
...
                        android:text="@string/confirm"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toEndOf="@id/declineButton"
                        app:layout_constraintTop_toBottomOf="@id/emailEwtv" />

                    <pl.kossa.myflights.views.ElementWithTagView
                        android:id="@+id/airplaneEwtv"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="16dp"
                        app:layout_constraintTop_toBottomOf="@id/confirmButton"
                        app:tagText="@string/airplane" />

                    <pl.kossa.myflights.views.ElementWithTagView
                        android:id="@+id/departureAirportEwtv"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="16dp"
                        app:layout_constraintTop_toBottomOf="@id/airplaneEwtv"
                        app:tagText="@string/departure_airport" />

                    <pl.kossa.myflights.views.ElementWithTagView
                        android:id="@+id/departureRunwayEwtv"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="16dp"
                        app:layout_constraintTop_toBottomOf="@id/departureAirportEwtv"
                        app:tagText="@string/departure_runway" />

                    <pl.kossa.myflights.views.ElementWithTagView
                        android:id="@+id/arrivalAirportEwtv"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="16dp"
                        app:layout_constraintTop_toBottomOf="@id/departureRunwayEwtv"
                        app:tagText="@string/arrival_airport" />

                    <pl.kossa.myflights.views.ElementWithTagView
                        android:id="@+id/arrivalRunwayEwtv"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="16dp"
                        app:layout_constraintTop_toBottomOf="@id/arrivalAirportEwtv"
                        app:tagText="@string/arrival_runway" />

                    <pl.kossa.myflights.views.ElementWithTagView
                        android:id="@+id/departureTimeEwtv"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="16dp"
                        app:layout_constraintTop_toBottomOf="@id/arrivalRunwayEwtv"
                        app:tagText="@string/departure_time" />


                    <pl.kossa.myflights.views.ElementWithTagView
                        android:id="@+id/arrivalTimeEwtv"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="16dp"
                        app:layout_constraintTop_toBottomOf="@id/departureTimeEwtv"
                        app:tagText="@string/arrival_time" />


                    <pl.kossa.myflights.views.ElementWithTagView
                        android:id="@+id/distanceEwtv"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="16dp"
                        app:layout_constraintTop_toBottomOf="@id/arrivalTimeEwtv"
                        app:tagText="@string/flight_distance" />

...
                        android:textColor="@color/black_day_night"
                        android:textSize="@dimen/middle_text_size"
                        app:layout_constraintTop_toBottomOf="@id/distanceEwtv" />


                    <TextView
                        android:id="@+id/noteTv"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="32dp"
                        android:layout_marginTop="8dp"
                        android:layout_marginEnd="32dp"
                        android:background="@drawable/ripple_bordered_transparent"
...
