<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:parentTag="androidx.constraintlayout.widget.ConstraintLayout">

        <TextView
            android:id="@+id/dateTimeTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:fontFamily="@font/poppins_light"
            android:textColor="@color/black_day_night"
            android:textSize="@dimen/middle_text_size"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="Element" />

    <TextView
        android:id="@+id/dateTv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:visibility="gone"
        android:textSize="@dimen/big_text_size"
        android:fontFamily="@font/poppins_semibold"
        android:textColor="@color/colorPrimary"
        app:layout_constraintEnd_toStartOf="@id/timeTv"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/dateTimeTv"
        tools:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:text="13.07.2021" />

    <TextView
        android:id="@+id/timeTv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:textSize="@dimen/big_text_size"
        android:visibility="gone"
        android:fontFamily="@font/poppins_semibold"
        android:textColor="@color/colorPrimary"
        app:layout_constraintStart_toEndOf="@id/dateTv"
        app:layout_constraintBaseline_toBaselineOf="@id/dateTv"
        app:layout_constraintEnd_toStartOf="@id/dateTimeChangeButton"
        tools:visibility="visible"
        tools:text="11:30" />


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/dateTimeChangeButton"
        style="@style/PrimaryOutlinedButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:text="@string/change"
        android:visibility="gone"
        tools:visibility="visible"
        app:layout_constraintBaseline_toBaselineOf="@id/timeTv"
        app:layout_constraintEnd_toEndOf="parent" />


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/dateTimeSelectButton"
        style="@style/PrimaryOutlinedButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:text="@string/select"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/dateTimeTv" />



</merge>