...
    android:background="@color/white_background_day_night"
    tools:parentTag="androidx.constraintlayout.widget.ConstraintLayout">


    <TextView
        android:background="@drawable/ripple_transparent"
        android:id="@+id/backTv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:drawablePadding="8dp"
        android:fontFamily="@font/poppins_light"
        android:text="@string/back"
...
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <ImageView
        android:id="@+id/deleteIv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:background="@drawable/ripple_transparent"
        android:src="@drawable/ic_delete"
        app:layout_constraintBottom_toBottomOf="parent"
...
